@@ -9,8 +9,11 @@ import com.cs321.team1.map.Vec2;
 import java.awt.Color;
 import java.awt.Dimension;
 import java.awt.Font;
+import java.awt.FontMetrics;
 import java.awt.Graphics;
+import java.awt.GraphicsDevice;
 import java.awt.GraphicsEnvironment;
+import java.awt.Rectangle;
 import java.awt.image.BufferedImage;
 import java.io.BufferedReader;
 import java.io.FileReader;
@@ -18,18 +21,19 @@ import java.io.FileWriter;
 import java.util.Arrays;
 import java.util.Timer;
 import java.util.TimerTask;
+import java.util.stream.Collectors;
 import javax.swing.JFrame;
 import javax.swing.JLabel;
 import javax.swing.JPanel;
 import javax.swing.WindowConstants;
-
 
 public class RenderingManager extends JPanel {
 
   private final JFrame window;
   private Vec2 windowedScreenSize = Resolutions._640x480.size;
   private int fullscreenMonitor = Arrays.stream(
-          GraphicsEnvironment.getLocalGraphicsEnvironment().getScreenDevices()).toList()
+          GraphicsEnvironment.getLocalGraphicsEnvironment().getScreenDevices())
+      .collect(Collectors.toList())
       .indexOf(GraphicsEnvironment.getLocalGraphicsEnvironment().getDefaultScreenDevice());
   private boolean fullscreen = false;
   private boolean debug = false;
@@ -62,7 +66,7 @@ public class RenderingManager extends JPanel {
   }
 
   public BufferedImage createImage() {
-    return new BufferedImage(getScreenSize().x(), getScreenSize().y(), BufferedImage.TYPE_INT_ARGB);
+    return new BufferedImage(getScreenSize().x, getScreenSize().y, BufferedImage.TYPE_INT_ARGB);
   }
 
   public int getFPS() {
@@ -84,7 +88,8 @@ public class RenderingManager extends JPanel {
   }
 
   public void setMonitor(int monitor) {
-    var monitors = GraphicsEnvironment.getLocalGraphicsEnvironment().getScreenDevices();
+    GraphicsDevice[] monitors = GraphicsEnvironment.getLocalGraphicsEnvironment()
+        .getScreenDevices();
     if (monitor > monitors.length - 1) {
       return;
     }
@@ -92,7 +97,7 @@ public class RenderingManager extends JPanel {
   }
 
   public Vec2 getScreenSize() {
-    var bounds = GraphicsEnvironment.getLocalGraphicsEnvironment()
+    Rectangle bounds = GraphicsEnvironment.getLocalGraphicsEnvironment()
         .getScreenDevices()[fullscreenMonitor].getDefaultConfiguration().getBounds();
     return fullscreen ? new Vec2(bounds.width, bounds.height) : windowedScreenSize;
   }
@@ -117,14 +122,15 @@ public class RenderingManager extends JPanel {
     window.dispose();
     window.setUndecorated(fullscreen);
     window.setVisible(true);
-    var monitors = GraphicsEnvironment.getLocalGraphicsEnvironment().getScreenDevices();
-    var bounds = monitors[fullscreenMonitor].getDefaultConfiguration().getBounds();
+    GraphicsDevice[] monitors = GraphicsEnvironment.getLocalGraphicsEnvironment()
+        .getScreenDevices();
+    Rectangle bounds = monitors[fullscreenMonitor].getDefaultConfiguration().getBounds();
     if (fullscreen) {
       window.setLocation(bounds.x, bounds.y);
       setPreferredSize(new Dimension(bounds.width, bounds.height));
     } else {
-      window.setLocation(bounds.x + (bounds.width - windowedScreenSize.x()) / 2,
-          bounds.y + (bounds.height - windowedScreenSize.y()) / 2);
+      window.setLocation(bounds.x + (bounds.width - windowedScreenSize.x) / 2,
+          bounds.y + (bounds.height - windowedScreenSize.y) / 2);
       setPreferredSize(windowedScreenSize.toDimension());
     }
     window.pack();
@@ -132,19 +138,19 @@ public class RenderingManager extends JPanel {
   }
 
   void loadOptions() {
-    try (var file = new BufferedReader(new FileReader("options.txt"))) {
-      for (String str : file.lines().toList()) {
+    try (BufferedReader file = new BufferedReader(new FileReader("options.txt"))) {
+      for (String str : file.lines().collect(Collectors.toList())) {
         try {
           if (str.startsWith("fullscreen: ")) {
             setFullscreen(Boolean.parseBoolean(str.split("fullscreen: ")[1]));
           }
           if (str.startsWith("screenWidth: ")) {
             setScreenSize(
-                new Vec2(Integer.parseInt(str.split("screenWidth: ")[1]), getScreenSize().y()));
+                new Vec2(Integer.parseInt(str.split("screenWidth: ")[1]), getScreenSize().y));
           }
           if (str.startsWith("screenHeight: ")) {
             setScreenSize(
-                new Vec2(getScreenSize().x(), Integer.parseInt(str.split("screenHeight: ")[1])));
+                new Vec2(getScreenSize().x, Integer.parseInt(str.split("screenHeight: ")[1])));
           }
           if (str.startsWith("monitor: ")) {
             setMonitor(Integer.parseInt(str.split("monitor: ")[1]));
@@ -167,10 +173,10 @@ public class RenderingManager extends JPanel {
   }
 
   void saveOptions() {
-    try (var file = new FileWriter("options.txt")) {
+    try (FileWriter file = new FileWriter("options.txt")) {
       file.write("fullscreen: " + fullscreen + "\n");
-      file.write("screenWidth: " + windowedScreenSize.x() + "\n");
-      file.write("screenHeight: " + windowedScreenSize.y() + "\n");
+      file.write("screenWidth: " + windowedScreenSize.x + "\n");
+      file.write("screenHeight: " + windowedScreenSize.y + "\n");
       file.write("monitor: " + fullscreenMonitor + "\n");
       file.write("sound: " + Sounds.getVolume() + "\n");
       file.write("music: " + Music.getVolume() + "\n");
@@ -206,15 +212,14 @@ public class RenderingManager extends JPanel {
       }
       if (debug) {
         tick++;
-        var f = getFont().deriveFont(getScreenSize().y() / 20F);
-        var metrics = g.getFontMetrics(f);
+        Font f = getFont().deriveFont(getScreenSize().y / 20F);
+        FontMetrics metrics = g.getFontMetrics(f);
         g.setColor(new Color(0F, 0F, 0F, 0.5F));
-        g.fillRect(getScreenSize().x() - metrics.stringWidth("   ") * 2, 0,
+        g.fillRect(getScreenSize().x - metrics.stringWidth("   ") * 2, 0,
             metrics.stringWidth("   ") * 3, metrics.getHeight() * 3);
         g.setFont(f);
         g.setColor(Color.WHITE);
-        g.drawString(measuredFPS + "",
-            (int) (getScreenSize().x() - metrics.stringWidth("   ") * 1.5),
+        g.drawString(measuredFPS + "", (int) (getScreenSize().x - metrics.stringWidth("   ") * 1.5),
             metrics.getHeight() * 2);
       }
     } catch (Exception ignored) {
